--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@layer components {
+    .btn {
+        @apply bg-brand-red hover:bg-brand-red/70 font-semibold transition-colors px-4 py-2 rounded-md text-lg;
+    }
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+    font-family: 'Rubik', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.st0 {
+    fill: #00AEEF;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.st1 {
+    opacity: 0.8;
+    fill: #FFFFFF;
+    enable-background: new;
+}
+
+.st2 {
+    fill: #FFFFFF;
 }
